
==== version history of distribution Log::Report

Unless noted otherwise, these changes where initiated and applied by
Mark Overmeer.

TODO:
	. connect to Message::Passing framework

version 1.42:

version 1.41: Thu 11 Sep 13:01:50 CEST 2025

	Changes:
	- require Perl 5.16 (2012)

	Fixes:
	- remember message 'to' within try
	  [Andy Beverley] github issue #9

	Improvements:
	- reorder docs in ::Domain
	- remove unused fromTemplateToolkit()
	- convert to OODoc 3.03
	- protect original exception from before throw()

version 1.40: Fri 18 Apr 17:05:09 CEST 2025

	Fixes:
	- own translation tables contained stuff moved to Lexicon

	Improvements:
	- reduce number of textdomain lookups at import.
	- refer to Dancer2::Template::TTLogReport
	- show version of XML::LibXML for tests 42/43
	- fix test for libxml2 use [cpantesters]

version 1.39: Mon  9 Sep 19:57:06 CEST 2024

	Fixes:
	- fix output of error [Andy Beverley]

version 1.38: Mon  9 Sep 11:00:15 CEST 2024

	Fixes:
	- Require Dancer2 >= 0.207 for test [cpantesters], GitHub issue #13
	- error code must be set when the script exists with error or panic
	  [Any Beverley]

	Improvements:
	- add _errno attribute to messages

version 1.37: Fri 28 Jun 11:08:19 CEST 2024

	Fixes:
	- Work with Dancer2 change to send_as [Andy Beverley]

version 1.36: Fri 27 Oct 15:05:13 CEST 2023

	Fixes:
	- Adapt test to new Dancer2 numbering scheme. [Petr Pisar]

version 1.35: Fri 27 Oct 08:27:54 CEST 2023

	Fixes:
	- Try blocks will always capture fatal messages, even when not
	  in the 'accept'-set. [Andy Beverley]
	- Adapt to new Dancer2 numbering scheme. [Tom Hukins]

	Improvements:
	- Dancer2 process() will warn when used incorrectly. [Andy Beverley]

version 1.34: Thu 15 Sep 09:43:40 CEST 2022

	Fixes:
	- ::Exception::isFatal() did not respect the is_fatal overrule.
	  Spotted by [Andy Berverley]

version 1.33: Sat Jul 17 10:56:52 CEST 2021

	Changes:
	- the $@->died with always return the original die causing object or